2010-11-29 Carsten Magass <magass -at- physik.rwth-aachen.de>
	* updated python configuration
	* tagged as version v6-2
2010-11-19 Carsten Magass <magass -at- physik.rwth-aachen.de>
	* new uncorrected jet pt variable
	* new code for JES variation and MET propagation
	* updated python with PF2PAT sequences, including cleaned PF jets
	* tagged as version v6-1
2010-11-18 Carsten Magass <magass -at- physik.rwth-aachen.de>
	* many new variables (e.g. bfield)
	* new running on AOD possible
	* new jets are split up into Calo and PF
	* new access of JES
	* new cocktail muons
	* new trigger process name picked up automatically (last one)
	* new analysis/SUSYDump.h
	* changed if event passes skimming cuts ALL objects are saved
	*         not only objects fulfilling skimming cuts
	* changed access to trigger information, including prescales
	* changed all HLT_ trigger results are saved
	* removed variable global_HLT
	* JetID possible for Calo Jets via selector
	* updated for CMSSW_3_8_6
	* updated scripts
	* tagged version v6-0
2010-09-01 Carsten Magass <magass -at- physik.rwth-aachen.de>
	* new: TCMet and PFMet are filled
	* new: electron trigger objects & matching
	* new: SuperCluster information
	* tagged version v5-3
2010-05-31 Carsten Magass <magass -at- physik.rwth-aachen.de>
	* bugfix: METx and METy swapped
	* updated for CMSSW_3_6_1
	* improved scripts
	* tagged version v5-2
2010-05-06 Carsten Magass <magass -at- physik.rwth-aachen.de>
	* new electron ID variables incl. conversion finder
	* removed old electron ID variables
	* new Muon ID variable
	* new beamspot information
	* prepared PF information (not filled)
	* updated scripts
	* tagged as version v5-1
2010-04-20 Carsten Magass <magass -at- physik.rwth-aachen.de>
	* switch to SLC5
	* updated scripts (prepare, counter)
	* many new variables (tracks, muons)
	* new luminosity information
	* tagged as version v5-0
2010-02-08 Carsten Magass <magass -at- physik.rwth-aachen.de>
	* many new variables